# create_application.py
@@ -4,7 +4,6 @@ from logging.config import fileConfig
 from config.load_config import load_config
 from typing import Optional
 from flask_swagger_ui import get_swaggerui_blueprint
-from flask_cors import CORS
 
 
 fileConfig('config/logging_conf.ini')
@@ -39,15 +38,6 @@ def create_application_with_controller(controller: Controller):
                                                   config= {"app_name": "Chotuve Auth Server"})
 
     app.register_blueprint(swaggerui_blueprint, url_prefix=SWAGGER_URL)
-
-    cors = CORS(app, resources={"/user": {"origins": "*"},
-                                "/user/recover_password": {"origins": "*"},
-                                "/user/new_password": {"origins": "*"},
-                                "/user/login": {"origins": "*"},
-                                "/registered_users": {"origins": "*"},
-                                "/api_key": {"origins": "*"},
-                                "/server_statistics": {"origins": "*"},
-                                "/health": {"origins": "*"}})
 
     app.add_url_rule('/health', 'api_health', controller.api_health)
     app.add_url_rule('/user/login', 'users_login', controller.users_login,
